--- a/src/site/src/styles/landing.css
+++ b/src/site/src/styles/landing.css
@@ -18,7 +18,7 @@
   bottom: 0;
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100"><line x1="0" y1="0" x2="100" y2="100" stroke="rgba(0,217,255,0.1)" stroke-width="1"/></svg>');
   background-size: 100px 100px;
-  opacity: 0.3;
+  opacity: 0.1;
   z-index: 1;
 }
 
